edition = "2023";

package api.proto.v1.rpc;

option go_package = "gophkeeper/protogen/api/proto/v1/rpc";

import "api/proto/v1/models/meta.proto";

message BankCardRequest {
  string card_number = 1;
  string expiry_date = 2;
  string cvv = 3;
  string cardholder = 4;
  api.proto.v1.models.Meta meta = 5;
}

message BankCardResponse {
  string message = 1;
}
